Susan S. - 4/10/2015 - More aesthetic changes from today's testing and styling checklist. Fixed issue where there was an extra space at the end of equipment names added to filter object sent to back end.

--- a/css/dwStyles.css
+++ b/css/dwStyles.css
@@ -51,6 +51,7 @@
 }
 #hiddenFootButtons{
    position:fixed;
+   bottom:25px;
 }
 
 #searchIcon{ /*style the magnifying glass glyphicon*/
@@ -76,13 +77,49 @@
 
 }
 
+#restriction{
+   position:absolute;
+   left:290px;
+   width: 250px;
+}
+
+#bigBox{
+   max-width:1250px;
+   max-height:720px;
+}
+
+.restrictButtonUP{
+   border: 1px solid lightgray; 
+   border-radius: 12px; 
+   padding: 3px; 
+   color: white; 
+   background-color:#99b9f4;
+   cursor:pointer; 
+   position:absolute; 
+   text-align: center;
+}
+.restrictButtonUP:hover{
+   font-weight: bold;
+}
+.restrictButtonDOWN{
+   background-color: #065195;
+   border-width: 3px;
+   font-weight: bold;
+
+}
+
+
 
 .contentContainer{ /*a general dashed-line container to show positioning while working on styling and layout*/
    border: 1px dashed black;
 }
 .listContainer{ /*a general dashed-line container to show positioning while working on styling and layout*/
-   border: 1px dashed black;
-   height: 500px;
+   /*border: 1px dashed black;*/
+  background: #ededf9;/*light, light gray*/
+  background-image:url("dinnerWizardLogoColor_B.png");
+  background-repeat: no-repeat;
+  background-position: center;
+  height: 500px;
 }
 
 div{
@@ -191,18 +228,19 @@ body {
    .swipable{
       margin-left: -80px;
    }
+   
+   #bigBox{
+      position:absolute;
+      left:22%;
+      width:1250px;
+      height:700px;
+   }
+   body { 
+      overflow-y:hidden;
+   }
 }
 
-/*slightly temporary rules for an attempt at different color #recipes button on each view. Under construction.*/
-.filtStyle{
-   color: #f8b30e; /* dark yellow */
-}
-.recStyle{
-   color: #8d1801; /*dark red */
-}
-.invStyle{
-   color: #065195; /* dark blue*/
-}
+
 
 /*some extra overrides for bootstrap's container-fluid to sit properly in this particular layout*/
 .container-fluid{
@@ -257,6 +295,12 @@ body {
       height:45px;
       width:400px;
       background-color:white;
+      
+   }
+    #bigBox{
+      position:absolute;
+      width:600px;
+      height:auto;
    }
 }
 @media (max-width: 500px) {
@@ -369,7 +413,7 @@ a:hover{
 .noStyle{
    border: none;
    color: black;
-   background-color: #fff;
+   background-color: transparent;
 }
 
 .noStyleList{
@@ -402,10 +446,22 @@ a:active{
    outline: none;
    
 }
+.recipeButton{
+   border: 1px solid #8d1801; /*dark red */
+}
 
+ul.pushDown{
+      margin-top:5px;
+}
+.noInteract:hover{
+   font-weight:normal;
+   cursor:default;
+} 
 
-
-
+.noInteract li:hover, .noInteract div:hover{
+   font-weight:normal;
+   cursor:default;
+ }
 /* styling accordions, overriding bootstrap css */
 .panel-default > .panel-heading{
    /*border: 1px solid gray;*/
@@ -440,13 +496,13 @@ a:active{
    div.listing{
       margin-left:0px;
       margin-right:10px;
-      height:400px;
+      height:380px;
       width: 270px;
       overflow-y: hidden;
    }
    div.listing:hover{
       margin-left:0px;
-      height:400px;
+      height:380px;
       margin-right:10px;
       overflow-y: auto;
    }
@@ -484,6 +540,7 @@ a:active{
       margin-top:15px;
       width:280px;
    }
+   
    .pushDown{
       margin-top:15px;
    }
@@ -499,6 +556,41 @@ a:active{
    border: none;
    font-weight: bold;
 }
+
+.filtStyle{
+   color: #eaa706; /* dark yellow */
+   border: 1px solid #eaa706;
+   border-radius: 18px;
+}
+.recStyle{
+   color: #8d1801; /*dark red */
+   border-radius: 18px;
+}
+.invStyle{
+   color: #065195; /* dark blue*/
+   border: 1px solid #065195;
+   border-radius: 18px;
+}
+.filtStyle:hover, .filtStyle:active, .filtStyle:focus{
+   background-color: #eaa706; /* dark yellow */
+   color:#ededf9;
+   border: 1px solid #ededf9;
+   
+
+}
+.recStyle:hover, .recStyle:active, .recStyle:focus{
+   background-color: #8d1801; /*dark red */
+   color:#ededf9;
+   border: 1px solid #ededf9;
+   
+}
+.invStyle:hover, .invStyle:active, .invStyle:focus{
+   background-color: #065195; /* dark blue*/
+   color:#ededf9;
+   border: 1px solid #ededf9;
+  
+}
+
 
 div a.accordion-toggle:link, div a.accordion-toggle:hover, div a.accordion-toggle:visited, div a.accordion-toggle:active,  a.accordion-toggle:link,  a.accordion-toggle:hover, a.accordion-toggle:visited, a.accordion-toggle:active{
    text-decoration:none;
@@ -556,8 +648,8 @@ h4.panel-title{
    color: white;
    border: none;
    text-decoration:none;
-}
 
+}
 .rec >.panel-group >.panel-default >.panel-heading{
    background-color: #99b9f4; /*medium light blue*/
    color: white;
@@ -574,7 +666,13 @@ div.panel-body{
    padding-left: 15px;
 }
 /***** end styling accordions*******/
-
+#splashBlanket{/*supposed to prevent issues with teh spash screen's hidden cursor from affecting the rest of the app*/
+   z-index:-1;
+   width:100%;
+   height:1200px;
+   margin-top:-15px;
+   background-color:white;
+}
 /* splash screen and its fade in/out animations*/
 .splash {
   background: white;
@@ -598,7 +696,7 @@ div.panel-body{
    font-size: 1em;
    font-family: 'Bitter', serif;
    position: relative;
-   top:85%;
+   top:90%;
    /*left: 20%;*/
    text-align: center;
    -webkit-animation: splashText 6s ease  2s 1;
@@ -640,7 +738,7 @@ div.panel-body{
    90%{opacity: 0;
    z-index: 2;}
    100%{opacity: 0;
-   z-index: -1;}
+   z-index: -2;}
 }
 
 @-webkit-keyframes splash{
@@ -651,7 +749,7 @@ div.panel-body{
    90%{opacity: 0;
    z-index: 2;}
    100%{opacity: 0;
-   z-index: -1;}
+   z-index: -2;}
 }
 
 @keyframes splashText{
@@ -662,7 +760,7 @@ div.panel-body{
    50%{opacity:100;
    z-index: 2;}
    100%{opacity: 0;
-   z-index: -1;}
+   z-index: -2;}
 }
 
 @-webkit-keyframes splashText{
@@ -672,7 +770,7 @@ div.panel-body{
    50%{opacity:100;
    z-index: 2;}
    100%{opacity: 0;
-   z-index: -1;}
+   z-index: -2;}
 }
 
 /*
